--- a/app/src/main/res/layout/content_carrito_agregar.xml
+++ b/app/src/main/res/layout/content_carrito_agregar.xml
@@ -53,7 +53,7 @@
             android:paddingLeft="5dp"
             android:textSize="15sp"
             android:textColor="#262933"
-            android:text="Nombre del producto..."/>
+            android:text=""/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -69,7 +69,7 @@
             android:paddingLeft="5dp"
             android:textSize="15sp"
             android:textColor="#262933"
-            android:text="Descripción del producto..."/>
+            android:text=""/>
     </LinearLayout>
 
 
@@ -120,6 +120,15 @@
             android:text="Dejar comentario"/>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvListaCarritoAgregarVacio"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textSize="20sp"
+        android:text="Este producto no tiene comentarios..." />
+
     <android.support.v7.widget.RecyclerView
         android:paddingHorizontal="30sp"
         android:id="@+id/rvListaCarritoAgregar"
