--- a/app/src/main/res/layout/activity_carrito_buscar.xml
+++ b/app/src/main/res/layout/activity_carrito_buscar.xml
@@ -62,7 +62,7 @@
         android:textStyle="bold"
         android:hint="Lista vacia."/>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:paddingHorizontal="30sp"
         android:id="@+id/rvListaCarritoBuscar"
         android:layout_width="match_parent"
