--- a/app/src/main/res/layout/activity_detalle.xml
+++ b/app/src/main/res/layout/activity_detalle.xml
@@ -165,7 +165,7 @@
             android:textColor="#262933"
             android:text="Lista de productos"/>
     </LinearLayout>
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:paddingHorizontal="30sp"
         android:id="@+id/rvListaDetalle"
         android:layout_width="match_parent"
