--- a/app/src/main/res/layout/content_carrito.xml
+++ b/app/src/main/res/layout/content_carrito.xml
@@ -88,7 +88,7 @@
             android:text="Agregar"/>
 
     </LinearLayout>
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:paddingHorizontal="30sp"
         android:id="@+id/rvListaCarrito"
         android:layout_width="match_parent"
