--- a/app/src/main/res/layout/content_carrito_agregar.xml
+++ b/app/src/main/res/layout/content_carrito_agregar.xml
@@ -129,7 +129,7 @@
         android:textSize="20sp"
         android:text="Este producto no tiene comentarios..." />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:paddingHorizontal="30sp"
         android:id="@+id/rvListaCarritoAgregar"
         android:layout_width="match_parent"
