--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -36,7 +36,7 @@
         android:layout_height="match_parent"
         android:textSize="20sp"
         android:text="Sin elementos..." />
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvListaCompras"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
